# WrightTools

./: appveyor.yml  setup.cfg  setup.py
WrightTools/: __init__.py  _group.py  _open.py  collection.py  kit.py  test.py
WrightTools/collection/: __init__.py  _collection.py
WrightTools/data/: _data.py
WrightTools/kit/: __init__.py  _timestamp.py
tests/: base.py
tests/data/: zoom.py
