[aliases]
test=pytest

[bdist_wheel]
universal=0

[flake8]
max-line-length = 99
exclude =
    .git,
    __pycache__,
    data,
    temp,
    *.egg*
    docs
count = True
ignore = D105, E203

[pydocstyle]
convention = numpy
add-ignore = D105

[metadata]
description_file = README.rst
license_file = LICENSE.txt


[tool:pytest]
addopts = --durations=10 --verbose
python_files = tests/*.py
